welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: identifier expected but '(' found.
for (i<- 0 to 5 ) {tab.(i) = getCouleurSol();avance()} 
                       ^